# alpamayo-recipes

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report_template.md  documentation_request_template.md  feature_request_template.md
.github/workflows/: ci.yml
recipes/alpamayo1_5_eval/: README.md  evaluate_single_clip.py  load_datasets.py  model.py  pyproject.toml
recipes/alpamayo1_5_eval/outputs/: minade_results.json
recipes/alpamayo1_5_quant/: README.md  eval.py  pyproject.toml  quantize.py  quantize_utils.py  utils.py
recipes/alpamayo1_5_sft/: README.md  SKILL.md  evaluate_hf.py  pyproject.toml  train_hf.py  trainer.py
recipes/alpamayo1_5_sft/benchmark/: run_benchmarks.py
recipes/alpamayo1_5_sft/configs/: sft_base.yaml  sft_fasea_trajectory.yaml  sft_stage1.yaml  sft_stage1_lingoqa.yaml  sft_stage1_nav.yaml  sft_stage1_roadwork.yaml  sft_stage1_roadwork_v2.yaml  sft_stage1_roadwork_v3.yaml  sft_stage2.yaml  sft_stage2_nav.yaml  sft_stage3_kd.yaml  sft_stage4_student.yaml  sft_stage4_v2.yaml  sft_stage4_v2_clean.yaml  sft_stage4_v3.yaml  sft_stage4_v4.yaml  sft_stage5_1_signs.yaml  sft_stage5_egostate.yaml  sft_stage6_general.yaml  sft_teacher_v2_pathways.yaml
recipes/alpamayo1_5_sft/models/: sft_alpamayo_r1.py  sft_base_model.py
recipes/alpamayo1_sft/: README.md  SKILL.md  evaluate_hf.py  pyproject.toml  train_hf.py
recipes/alpamayo1_sft/benchmark/: run_benchmarks.py
recipes/alpamayo1_sft/configs/: sft_base.yaml
recipes/alpamayo1_sft/models/: sft_alpamayo_r1.py
recipes/alpamayo1_x_rl/: README.md  SKILL.md  base_cosmos_wrapper.py  base_data_packer.py  base_dataset.py  base_trainer.py  launcher.py  pyproject.toml  run_rl_local_test_signal_node.sh  state.py
recipes/alpamayo1_x_rl/diffusion/: flow_matching.py
recipes/alpamayo1_x_rl/hydra_configs/: alpamayo1_5_rvla_rl_pai.yaml  alpamayo1_rvla_rl_pai.yaml
recipes/alpamayo1_x_rl/models/: __init__.py  _spec.py
recipes/alpamayo1_x_rl/notebooks/: rl_checkpoint_inference.ipynb
recipes/alpamayo1_x_rl/prefetch/: dataset.py  server.py  test_prefetch.py
recipes/alpamayo1_x_rl/rewards/: aggregated_reward.py  collision_reward.py  (+2 more)
scripts/: convert_checkpoint.py  convert_release_config_to_training.py  download_pai.py
src/: pyproject.toml
src/alpamayo/data/: pai.py  pai_nav.py  pai_utils.py
src/alpamayo/data/decoders/: obstacle_decoder_pai.py
src/alpamayo/geometry/: boxes.py
src/alpamayo/metrics/: collision_metrics.py  metric_api.py
src/alpamayo/processor/: qwen_processor.py
src/alpamayo_r1/data/: lingoqa.py  pai.py  pai_nav.py
tests/: test_ci_baseline.py
(+75 files in other folders)
