[project]
name = "alpamayo-recipes"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
  "alpamayo_r1",  # inference models, action_space, geometry.rotation, common.logging, etc.
  "accelerate>=1.12.0",
  "av>=16.0.1",
  "cosmos-rl",
  "einops>=0.8.1",
  "hydra-colorlog>=1.2.0",
  "hydra-core>=1.3.2",
  "mediapy>=1.2.4",
  "opencv-python>=4.10.0",
  "pandas>=2.3.3",
  "physical_ai_av>=0.2.0",
  "pillow>=12.0.0",
  "torch==2.8.0",
  "torchvision>=0.23.0",
  "transformers==4.57.1",
  "flash-attn>=2.8.3",
  "rich>=14.3.3",
  "wandb>=0.25.0",
  "torchmetrics==1.8.2",
  "deepspeed==0.18.2",
  "vllm==0.11.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

# Ships three packages:
#   alpamayo_r1 (namespace extension) — training-only additions to the alpamayo_r1 namespace
#                                        (common/misc, processor, data, geometry/coordinates, etc.)
#                                        inherits models, action_space, geometry/rotation, etc. from
#                                        the alpamayo_r1 dependency above.
#   alpamayo1_sft            — supervised fine-tuning recipe
#   alpamayo1_x_rl           — reinforcement learning recipe (Cosmos-RL / GRPO)
#
# alpamayo_r1 is a Python namespace package — alpamayo provides the inference half,
# alpamayo-recipes extends it with training utilities. Install both in editable mode:
#   pip install -e ../alpamayo
#   pip install -e .
[tool.hatch.build.targets.wheel]
packages = [
  "src/alpamayo_r1",
  "recipes/alpamayo1_sft",
  "recipes/alpamayo1_x_rl",
]

[tool.hatch.build.targets.sdist]
include = ["/pyproject.toml", "/src", "/recipes/alpamayo1_sft", "/recipes/alpamayo1_x_rl"]

[dependency-groups]
dev = [
  "matplotlib>=3.10.7",
  "mediapy>=1.2.4",
  "ipykernel>=6.29.3",
  "ipywidgets>=8.1.8",
  "tqdm",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.uv.sources]
alpamayo_r1 = { path = "../alpamayo", editable = true }
cosmos-rl = { git = "https://github.com/nvidia-cosmos/cosmos-rl.git", rev = "747d1bd" }

[tool.ruff]
line-length = 100
